--- a/action.yml
+++ b/action.yml
@@ -1,10 +1,16 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: "cschleiden"
+description: "Replace tokens in files"
+author: "cschleiden"
 inputs:
-  myInput:              # change this
-    description: 'input description here'
-    default: 'default value if applicable'
+  tokenPrefix:
+    description: ""
+    default: "#{"
+  tokenSuffix:
+    description: ""
+    default: "}#"
+  files:
+    description: ""
+    default: "#{"
 runs:
-  using: 'node12'
-  main: 'lib/main.js'
+  using: "node12"
+  main: "lib/main.js"
