--- a/package.json
+++ b/package.json
@@ -22,16 +22,16 @@
   "author": "cschleiden",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.10.0",
-    "replace-in-file": "^6.3.5"
+    "@actions/core": "^1.10.1",
+    "replace-in-file": "^7.1.0"
   },
   "devDependencies": {
-    "@types/jest": "^29.1.2",
-    "@types/node": "^18.8.5",
-    "@zeit/ncc": "^0.20.5",
-    "jest": "^29.1.2",
-    "jest-circus": "^29.1.2",
-    "ts-jest": "^29.0.3",
-    "typescript": "^4.8.4"
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.11.13",
+    "@vercel/ncc": "^0.38.1",
+    "jest": "^29.7.0",
+    "jest-circus": "^29.7.0",
+    "ts-jest": "^29.1.2",
+    "typescript": "^5.3.3"
   }
 }
